[package]
name = "finstack-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "finstack"
crate-type = ["cdylib", "rlib"]
# `pyo3` extension modules are meant to be loaded by a Python interpreter.
# Running Rust unit tests directly (`cargo test`) produces a standalone binary
# that fails to resolve Python symbols on macOS.
test = false
doctest = false

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
finstack-core = { path = "../finstack/core" }
finstack-analytics = { path = "../finstack/analytics" }
finstack-monte-carlo = { path = "../finstack/monte_carlo", features = ["mc"] }
finstack-valuations = { path = "../finstack/valuations", features = ["mc"] }
finstack-statements = { path = "../finstack/statements", features = ["dataframes"] }
finstack-scenarios = { path = "../finstack/scenarios" }
finstack-portfolio = { path = "../finstack/portfolio", features = ["scenarios"] }
pyo3 = { version = "0.28" }
pyo3-polars = { version = "0.26", default-features = false, features = ["derive"] }
polars = { version = "0.53", default-features = false, features = ["temporal"] }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
pythonize = "0.28"

# Needed for Month enum used in Date bindings
time = { workspace = true }
strum = { workspace = true }
rayon = "1.11.0"
rust_decimal = { workspace = true }
