[package]
name = "finstack-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "finstack"
crate-type = ["cdylib", "rlib"]
# `pyo3` extension modules are meant to be loaded by a Python interpreter.
# Running Rust unit tests directly (`cargo test`) produces a standalone binary
# that fails to resolve Python symbols on macOS.
test = false
doctest = false

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
finstack-core = { path = "../finstack/core" }
finstack-analytics = { path = "../finstack/analytics" }
finstack-cashflows = { path = "../finstack/cashflows" }
finstack-margin = { path = "../finstack/margin" }
finstack-monte-carlo = { path = "../finstack/monte_carlo" }
finstack-valuations = { path = "../finstack/valuations" }
finstack-statements = { path = "../finstack/statements" }
finstack-statements-analytics = { path = "../finstack/statements-analytics" }
finstack-scenarios = { path = "../finstack/scenarios" }
finstack-portfolio = { path = "../finstack/portfolio" }
nalgebra = "0.34"
pyo3 = { version = "0.28", features = ["multiple-pymethods"] }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }

# Needed for Month enum used in Date bindings
time = { workspace = true }
strum = { workspace = true }
rust_decimal = { workspace = true }
