[package]
name = "finstack-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for Finstack - high-performance financial computation library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
finstack-core = { path = "../finstack/core" }
finstack-statements = { path = "../finstack/statements" }
finstack-valuations = { path = "../finstack/valuations", default-features = false, features = ["serde", "mc"] }
finstack-scenarios = { path = "../finstack/scenarios" }
finstack-portfolio = { path = "../finstack/portfolio", default-features = false, features = ["scenarios"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
strum = { workspace = true }
indexmap = { workspace = true }
ts-rs = { version = "10", optional = true, features = ["serde-compat"] }

# Month enum required by Date bindings
time = { workspace = true }
rust_decimal = { workspace = true }
web-sys = { version = "0.3.83", features = ["Window", "Performance", "console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Features
#
# - `default`: Enables console panic hook and scenarios support for standard usage
# - `console_error_panic_hook`: Better panic messages in browser console (recommended for development)
# - `scenarios`: Portfolio scenario analysis and stress testing (requires finstack-portfolio scenarios)
[features]
default = ["console_error_panic_hook", "scenarios"]
scenarios = ["finstack-portfolio/scenarios"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
ts_export = ["dep:ts-rs", "finstack-valuations/ts_export"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals"]
