[package]
name = "finstack-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for Finstack - high-performance financial computation library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
finstack-analytics = { path = "../finstack/analytics" }
finstack-core = { path = "../finstack/core" }
finstack-margin = { path = "../finstack/margin" }
finstack-statements = { path = "../finstack/statements" }
finstack-statements-analytics = { path = "../finstack/statements-analytics" }
finstack-valuations = { path = "../finstack/valuations", default-features = false, features = ["mc"] }
finstack-monte-carlo = { path = "../finstack/monte_carlo", default-features = false, features = ["mc"] }
finstack-scenarios = { path = "../finstack/scenarios" }
finstack-portfolio = { path = "../finstack/portfolio", default-features = false, features = ["scenarios"] }
# Pinned: extract_instrument relies on WasmRefCell internal layout (see mod.rs:260-393).
# Bump only after verifying pointer-based extraction still works.
wasm-bindgen = "=0.2.114"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
serde_json = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
indexmap = { workspace = true }
ts-rs = { version = "12", optional = true, features = ["serde-compat"] }

# Month enum required by Date bindings
time = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", any(target_os = "unknown", target_os = "none")))'.dependencies]
# `jsonschema` pulls in `ahash` -> `getrandom` 0.3 on wasm. Enabling the `wasm_js`
# feature here unifies features for that transitive version so `wasm-pack build`
# can produce the JS/WASM package consumed by the TSX examples.
getrandom_03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Features
#
# - `default`: Enables console panic hook and scenarios support for standard usage
# - `console_error_panic_hook`: Better panic messages in browser console (recommended for development)
# - `scenarios`: Portfolio scenario analysis and stress testing (requires finstack-portfolio scenarios)
[features]
default = ["console_error_panic_hook", "scenarios"]
scenarios = ["finstack-portfolio/scenarios"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
ts_export = ["dep:ts-rs", "finstack-valuations/ts_export"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[package.metadata.wasm-pack.profile.release]
# Keep this feature allowlist in sync with the wasm features emitted by the
# pinned Rust toolchain; Rust 1.91+ emits SIMD in the optimized module.
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals", "--enable-simd"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals", "--enable-simd"]
