[package]
name = "finstack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["core"]

# Crate selection features
core = ["dep:finstack_core"]
analytics = ["core", "dep:finstack_analytics"]
margin = ["core", "dep:finstack_margin"]
statements = ["core", "dep:finstack_statements", "dep:indexmap"]
valuations = ["core", "dep:finstack_valuations"]
scenarios = ["core", "statements", "dep:finstack_scenarios"]
portfolio = ["core", "statements", "valuations", "dep:finstack_portfolio"]
all = ["core", "analytics", "margin", "statements", "valuations", "portfolio", "scenarios"]

# Cross-cutting capability features
serde = []  # Delegated to subcrates (enabled by default in most)
parallel = ["finstack_valuations/parallel", "finstack_portfolio?/parallel"]
dataframes = ["finstack_statements/dataframes", "finstack_portfolio/dataframes"]

[dependencies]
finstack_core = { package = "finstack-core", path = "core", optional = true }
finstack_analytics = { package = "finstack-analytics", path = "analytics", optional = true }
finstack_margin = { package = "finstack-margin", path = "margin", optional = true }
finstack_statements = { package = "finstack-statements", path = "statements", optional = true }
finstack_valuations = { package = "finstack-valuations", path = "valuations", optional = true }
finstack_portfolio = { package = "finstack-portfolio", path = "portfolio", optional = true }
finstack_scenarios = { package = "finstack-scenarios", path = "scenarios", optional = true }
indexmap = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
time = { workspace = true, features = ["macros"] }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
num-traits = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
