[package]
name = "finstack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack_core = { package = "finstack-core", path = "core" }
finstack_analytics = { package = "finstack-analytics", path = "analytics" }
finstack_cashflows = { package = "finstack-cashflows", path = "cashflows" }
finstack_margin = { package = "finstack-margin", path = "margin" }
finstack_statements = { package = "finstack-statements", path = "statements" }
finstack_statements_analytics = { package = "finstack-statements-analytics", path = "statements-analytics" }
finstack_valuations = { package = "finstack-valuations", path = "valuations" }
finstack_portfolio = { package = "finstack-portfolio", path = "portfolio" }
finstack_scenarios = { package = "finstack-scenarios", path = "scenarios" }
finstack_monte_carlo = { package = "finstack-monte-carlo", path = "monte_carlo" }

[dev-dependencies]
time = { workspace = true, features = ["macros"] }
rust_decimal = { workspace = true }
