[package]
name = "rfin-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rfin"
crate-type = ["cdylib"]

[dependencies]
rfin-core = { path = "../core", features = ["std", "holidays"] }
pyo3 = { version = "0.22", features = ["extension-module"] }

# Needed for Month enum used in Date bindings
time = { version = "0.3", default-features = false }

[build-dependencies]
pyo3-build-config = "0.22"

[features]
default = []
decimal128 = ["rfin-core/decimal128"]