[package]
name = "finstack-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core" }
indexmap = { workspace = true, features = ["serde"] }
nalgebra = "0.34"
rand = { version = "0.9.3", default-features = false, features = ["small_rng", "std"] }
serde = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "analytics_hot_paths"
harness = false
