[package]
name = "finstack-cashflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Cashflow schedule construction, projection, and aggregation for structured finance"

[dependencies]
finstack-core = { path = "../core" }
indexmap = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { version = "1.15", default-features = false, features = ["serde"] }
time = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.9"
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "cashflow_hot_paths"
harness = false
