[package]
name = "finstack-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serde is a core public dependency: we rely on derive macros across the crate.
# Use default features (std) to avoid alloc/no_std mismatches.
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { version = "2.0", default-features = false }
time = { version = "0.3", default-features = false, features = ["macros", "formatting", "parsing", "serde", "serde-human-readable", "wasm-bindgen"] }
smallvec = { version = "1.15", default-features = false }
phf = { version = "0.13", features = ["macros"], default-features = false }
rustc-hash = { workspace = true }
parking_lot = "0.12"
lru = "0.16"
rust_decimal = { version = "1.39", default-features = false, features = ["serde-with-str"] }
statrs = { version = "0.18", default-features = false }
nalgebra = "0.34"

[build-dependencies]
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false }
serde_json = "1.0"

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"

[[bench]]
name = "money_operations"
harness = false

[[bench]]
name = "daycount_operations"
harness = false

[[bench]]
name = "calendar_operations"
harness = false

[[bench]]
name = "interpolation"
harness = false

[[bench]]
name = "curve_operations"
harness = false

[[bench]]
name = "expr_dag"
harness = false

[[bench]]
name = "rolling"
harness = false

[[bench]]
name = "solver_operations"
harness = false

[[bench]]
name = "market_context"
harness = false

[[bench]]
name = "vol_surface"
harness = false

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "statistical_functions"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
