[package]
name = "finstack-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serde is a core public dependency: we rely on derive macros across the crate.
# Use default features (std) to avoid alloc/no_std mismatches.
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["macros", "formatting", "parsing", "serde", "serde-human-readable", "wasm-bindgen"] }
smallvec = { version = "1.15", default-features = false }
phf = { version = "0.13", features = ["macros"], default-features = false }
rustc-hash = { workspace = true }
parking_lot = "0.12"
lru = "0.16"
indexmap = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
# `schemars` is a build-time/runtime dependency for JSON-Schema derivation.
# It is consumed downstream by `finstack-valuations` (see
# `finstack/valuations/tests/schema_audit.rs` and `valuations/schemas/`),
# which means feature-gating `JsonSchema` derives in this crate would
# cascade into the binding crates and the schema-parity test harness.
# Until a binary-size or compile-time bench shows the cost is material,
# `schemars` stays an unconditional dependency. Re-evaluate when the
# workspace adopts a `wasm-only` build profile that drops the JSON-schema
# story (binding consumers don't need it at runtime, only at build time
# for `valuations/schemas/` regeneration).
schemars = { workspace = true }
statrs = { version = "0.18", default-features = false }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
num-complex = "0.4"
# Production-grade random number generation
rand = { version = "0.9.3", default-features = false, features = ["std"] }
rand_pcg = { version = "0.9", features = ["serde"] }
tracing = { version = "0.1", default-features = false }

[build-dependencies]
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "money_operations"
harness = false

[[bench]]
name = "daycount_operations"
harness = false

[[bench]]
name = "calendar_operations"
harness = false

[[bench]]
name = "interpolation"
harness = false

[[bench]]
name = "curve_operations"
harness = false

[[bench]]
name = "expr_dag"
harness = false

[[bench]]
name = "rolling"
harness = false

[[bench]]
name = "solver_operations"
harness = false

[[bench]]
name = "market_context"
harness = false

[[bench]]
name = "vol_surface"
harness = false

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "statistical_functions"
harness = false

[[bench]]
name = "rate_conversions"
harness = false

[[bench]]
name = "cashflow_operations"
harness = false

[[bench]]
name = "schedule_generation"
harness = false

[[bench]]
name = "factor_model"
harness = false

[[bench]]
name = "contention"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
