[package]
name = "finstack-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:postgres", "dep:chrono"]

[dependencies]
finstack-core = { path = "../core" }
finstack-portfolio = { path = "../portfolio" }
finstack-valuations = { path = "../valuations" }
finstack-statements = { path = "../statements" }
finstack-scenarios = { path = "../scenarios" }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde_json = "1"
thiserror = "2"
time = "0.3"
sea-query = "0.32"
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
indexmap = "2"
tempfile = "3"
time = { version = "0.3", features = ["macros"] }
