[package]
name = "finstack-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:tokio-rusqlite", "dep:rusqlite"]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres", "dep:chrono"]
turso = ["dep:libsql"]

[dependencies]
finstack-core = { path = "../core" }
finstack-portfolio = { path = "../portfolio" }
finstack-valuations = { path = "../valuations" }
finstack-statements = { path = "../statements" }
finstack-scenarios = { path = "../scenarios" }

# Core dependencies
serde_json = "1"
thiserror = "2"
time = "0.3"
sea-query = "0.32"

# Async runtime (required for all backends)
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
async-trait = "0.1"

# SQLite: tokio-rusqlite for async wrapper
tokio-rusqlite = { version = "0.6", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# Postgres: deadpool-postgres for async pool
deadpool-postgres = { version = "0.14", optional = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"], optional = true }
chrono = { version = "0.4", optional = true }

# Turso: libsql native async
libsql = { version = "0.6", optional = true }

[dev-dependencies]
indexmap = "2"
tempfile = "3"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
