[package]
name = "finstack-portfolio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-valuations = { path = "../valuations" }
finstack-scenarios = { path = "../scenarios", optional = true }
finstack-statements = { path = "../statements", optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"
time = { version = "0.3", features = ["macros", "serde", "parsing", "formatting"] }
polars = { version = "0.52", default-features = false, features = ["fmt", "dtype-date"], optional = true }
rayon = { version = "1.11", optional = true }
good_lp = { version = "1.14", default-features = false, features = ["microlp"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
rust_decimal = { version = "1.39" }
rust_decimal_macros = { version = "1.39" }

[features]
default = ["scenarios", "dataframes", "parallel"]
scenarios = ["dep:finstack-scenarios", "dep:finstack-statements"]
dataframes = ["dep:polars"]
parallel = ["dep:rayon"]

[[bench]]
name = "portfolio_valuation"
harness = false

