[package]
name = "finstack-portfolio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core", features = ["golden"] }
finstack-margin = { path = "../margin" }
finstack-valuations = { path = "../valuations" }
finstack-scenarios = { path = "../scenarios", optional = true }
finstack-statements = { path = "../statements", optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
tracing = "0.1"
time = { workspace = true, features = ["macros", "serde", "parsing", "formatting"] }
polars = { version = "0.53", default-features = false, features = ["fmt", "dtype-date"], optional = true }
rayon = { version = "1.11", optional = true }
good_lp = { version = "1.15", default-features = false, features = ["microlp"] }

[dev-dependencies]
criterion = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[features]
default = ["scenarios", "dataframes", "parallel"]
scenarios = ["dep:finstack-scenarios", "dep:finstack-statements"]
dataframes = ["dep:polars"]
parallel = ["dep:rayon"]

[[bench]]
name = "portfolio_valuation"
harness = false
