[package]
name = "finstack-portfolio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-margin = { path = "../margin" }
finstack-valuations = { path = "../valuations" }
finstack-scenarios = { path = "../scenarios" }
finstack-statements = { path = "../statements" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
tracing = "0.1"
time = { workspace = true, features = ["macros", "serde", "parsing", "formatting"] }
rayon = "1.11"
good_lp = { version = "1.15", default-features = false, features = ["microlp"] }

[dev-dependencies]
criterion = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[[bench]]
name = "portfolio_valuation"
harness = false

[[bench]]
name = "parallel_thresholds"
harness = false
