[package]
name = "finstack-scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-statements = { path = "../statements" }
finstack-valuations = { path = "../valuations" }
indexmap = { version = "2.12", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3" }

[dev-dependencies]
time = { version = "0.3", features = ["macros"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "scenarios"
harness = false
