[package]
name = "finstack-statements-analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
finstack-core = { path = "../core" }
finstack-statements = { path = "../statements" }
finstack-valuations = { path = "../valuations" }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
time = { workspace = true }
tracing = { version = "0.1", default-features = false }
rayon = "1.11"

[dev-dependencies]
time = { workspace = true, features = ["macros"] }

[features]
default = []
